<resources>
    <string name="app_name">Api_RXjava_Task</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="todo3">TODO</string>
    <string name="title2">Title</string>
    <string name="todo4">TODO</string>
    <string name="content">Content</string>
    <string name="read_list">Read list</string>
</resources>